# LattEasy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
benchmarks/: capillary_intrusion.ipynb  slit_flow.ipynb
examples/: first_simulation.py
examples/PoreSpy_permeability/: run_permeability.py
examples/gray_sponge_permeability/: run_permeability.py
examples/porespy_permeability/: porespy_permeability.ipynb  run_permeability.py
examples/porespy_two_phase/: run_steady_state.py
examples/porespy_unsteady_relperm/: run_relperm.py
latteasy/: __init__.py  _native.py  cli.py  demo.py  two_phase.py
latteasy/postprocessing/: IO_tools.py
latteasy/preprocessing/: IO_tools.py  geometry.py
src/foam/: CMakeLists.txt  foam_flow.cpp
src/gray_single_phase/: CMakeLists.txt  gray_permeability.cpp
src/multi_phase/: CMakeLists.txt  ShanChen.cpp
src/palabos-master/src/: palabos3D.h  palabos3D.hh
src/palabos-master/src/io/: imageWriter.hh  multiBlockReader3D.cpp  multiBlockReader3D.h  utilIO_3D.cpp  utilIO_3D.h
src/palabos-master/src/lbfoam/bubble/: bubbleTracking3D.cpp  bubbleTracking3D.hh
src/palabos-master/src/lbfoam/dynamics/: advectionDiffusionBubbleGrowth3D.hh
src/palabos-master/src/multiGrid/: multiGridParameterManager.hh
src/palabos-master/src/multiPhysics/: freeSurfaceModel3D.h  freeSurfaceModel3D.hh
src/palabos-master/src/offLattice/: offLatticeBoundaryCondition3D.hh
src/single_phase/: CMakeLists.txt  permeability.cpp
