[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "latteasy"
version = "0.1.0"
description = "Utilities for Lattice Boltzmann preprocessing and postprocessing"
authors = [{name="LattEasy Developers"}]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["latteasy*"]
