[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "latteasy"
version = "0.1.0"
description = "Utilities for Lattice Boltzmann preprocessing and postprocessing"
authors = [{name="LattEasy Developers"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "porespy>=2.0.0,<3.0.0",
    "pyvista",
    "scipy",
    "scikit-image>=0.19.0,<0.25.0",
"llvmlite==0.45.1",
"numba==0.62.1",
]

[project.scripts]
latteasy = "latteasy.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["latteasy*"]

[tool.setuptools.package-data]
latteasy = ["bin/*"]
